--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     align-items: center;
     margin-bottom: 5px;
     width: 65%;
-    border-bottom: 1px solid #ccc; 
+    border-bottom: 1px solid white; 
     padding-bottom: 5px;
 }
 #tareas-container{
